--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=https://gaea-rx.com/public/
+APP_URL=https://gaea-rx.com/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_STORE=database  
 
 BCRYPT_ROUNDS=12
 
@@ -20,7 +20,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
+DB_HOST=localhost
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
@@ -39,15 +39,15 @@ QUEUE_CONNECTION=database
 CACHE_STORE=database
 CACHE_PREFIX=
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=localhost
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=localhost
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
+MAIL_HOST=localhost
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
